crates/stef-compiler/tests/inputs/validate/enum_named_tuple_single.stef
enum Sample {
    One @1,
    Two {
        field: (u8) @1,
    } @2,
}
