crates/stef-compiler/tests/inputs/invalid/enum_gen_unused.stef
enum Sample<T> {
    One @1,
    Two { value: string @1 } @2,
}
